refactor: 配列操作をストリームAPIに変更